--- a/config.env
+++ b/config.env
@@ -1,17 +1,17 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://gitlab.com/Qiiks/Gsapatch
+KERNEL_SOURCE_BRANCH=android-gs-bluraviole-5.10-android14-qpr2-monolithic
+KERNEL_CONFIG=gs101_defconfig
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
-CUSTOM_CLANG_SOURCE=
+USE_CUSTOM_CLANG=true
+CUSTOM_CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/19.0.0git-20240712-release/Clang-19.0.0git-20240712.tar.gz
 CUSTOM_CLANG_BRANCH=
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
