--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=true
+USE_CUSTOM_CLANG=false
 CUSTOM_CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/19.0.0git-20240712-release/Clang-19.0.0git-20240712.tar.gz
 CUSTOM_CLANG_BRANCH=
 
