--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://gitlab.com/Qiiks/Gsapatch
-KERNEL_SOURCE_BRANCH=android-gs-bluraviole-5.10-android14-qpr2-monolithic
-KERNEL_CONFIG=gs101_defconfig
+KERNEL_SOURCE=https://gitlab.hentaios.com/hentaios-gs/kernel_common
+KERNEL_SOURCE_BRANCH=Ursamoon
+KERNEL_CONFIG=gki_defconfig
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
@@ -10,7 +10,7 @@ EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
+USE_CUSTOM_CLANG=true
 CUSTOM_CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/19.0.0git-20240712-release/Clang-19.0.0git-20240712.tar.gz
 CUSTOM_CLANG_BRANCH=
 
@@ -34,8 +34,8 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=false
-KERNELSU_TAG=v0.9.5
+ENABLE_KERNELSU=true
+KERNELSU_TAG=v1.0.0
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
