--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://gitlab.hentaios.com/hentaios-gs/kernel_common
-KERNEL_SOURCE_BRANCH=Ursamoon
-KERNEL_CONFIG=gki_defconfig
+KERNEL_SOURCE=https://github.com/reocat/pxl6
+KERNEL_SOURCE_BRANCH=blu_spark-14
+KERNEL_CONFIG=blu_spark_defconfig
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
@@ -11,7 +11,7 @@ EXTRA_CMDS:LD=ld.lld
 # Clang
 ## Custom
 USE_CUSTOM_CLANG=true
-CUSTOM_CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/19.0.0git-20240712-release/Clang-19.0.0git-20240712.tar.gz
+CUSTOM_CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20240730-release/Clang-20.0.0git-20240730.tar.gz
 CUSTOM_CLANG_BRANCH=
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
