--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/reocat/pxl6
-KERNEL_SOURCE_BRANCH=blu_spark-14
-KERNEL_CONFIG=blu_spark_defconfig
-KERNEL_IMAGE_NAME=Image
+KERNEL_SOURCE=https://github.com/J2KX-DEVELOPMENT/android_kernel_2JKX
+KERNEL_SOURCE_BRANCH=master
+KERNEL_CONFIG=j2kx_stable_defconfig
+KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
@@ -11,8 +11,8 @@ EXTRA_CMDS:LD=ld.lld
 # Clang
 ## Custom
 USE_CUSTOM_CLANG=true
-CUSTOM_CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20240730-release/Clang-20.0.0git-20240730.tar.gz
-CUSTOM_CLANG_BRANCH=
+CUSTOM_CLANG_SOURCE=https://github.com/kdrag0n/proton-clang
+CUSTOM_CLANG_BRANCH=master
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
@@ -35,7 +35,7 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 ENABLE_KERNELSU=true
-KERNELSU_TAG=v1.0.0
+KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
@@ -44,7 +44,7 @@ DISABLE-LTO=false
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
-APPLY_KSU_PATCH=false
+APPLY_KSU_PATCH=true
 REMOVE_UNUSED_PACKAGES=true
 
 # AnyKernel3
